--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,8 +8,7 @@
 
     <body>
         {{>header}}
-        <h1>{{title}}</h1>
-        <p>Created by {{name}}</p>
+        {{>footer}}
     </body>
 
 </html>
