--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,8 +9,7 @@
 
     <body>
         {{>header}}
-        <h1>{{title}}</h1>
-        <p>Created by {{name}}</p>
+        {{>footer}}
     </body>
 
 </html>
