style site very lightly

--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -3,12 +3,18 @@
 <html>
 
     <head>
+        <title>404</title>
+        <link rel="icon" href="img/cloudy.png"></link>
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
-        {{>header}}
-        <p>{{errorMessage}}</p>
+
+        <div class="main-content">
+            {{>header}}
+            <p>{{errorMessage}}</p>
+            
+        </div>
         {{>footer}}
     </body>
 
