--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -3,11 +3,16 @@
 <html>
 
     <head>
+        <title>About</title>
+        <link rel="icon" href="img/cloudy.png"></link>
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 
     <body>
-        {{>header}}
+        <div class="main-content">
+            {{>header}}
+        </div>
+        
         {{>footer}}
     </body>
 
